--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -7,7 +7,7 @@
 
 appearance:
   theme_day: strawberry 
-  theme_night: minimal
+ # theme_night: minimal
   font: minimal
   font_size: L
 
@@ -64,11 +64,11 @@ features:
     theme_light: github-light
     theme_dark: dracula
   math:
-    enable: false
+    enable: true
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/sohelkhannfs/giscus'
     content_dir: content
     branch: main
   avatar:
