--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,8 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
-baseURL: 'https://example.com/' # Website URL
+title: Sohel Khan # Website name
+baseURL: 'https://sohelkhan.rbind.io/' # Website URL
 
 ############################
 ## LANGUAGE
@@ -21,10 +21,10 @@ removePathAccents: true
 
 module:
   imports:
-    - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify-cms
-    - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify
-    - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-reveal
-    - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy/v5
+    - path: /themes/modules/wowchemy-plugin-netlify-cms
+    - path: /themes/modules/wowchemy-plugin-netlify
+    - path: /themes/modules/wowchemy-plugin-reveal
+    - path: /themes/modules/wowchemy/v5
 
 ############################
 ## ADVANCED
