--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,9 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    description: 'Hi! I’m Sohel.
+I am an online tech writer and certified google ads specialist. As a google ads expert, I help businesses generate more traffic and leads.There is no question of good luck and “hope marketing”. I simply switch off the ads that don’t work and double down on the campaigns that do work! I help businesses and organizations establish and grow their digital presence. 95% of people who may be not interested in your service. With modern Ad techniques, I can completely exclude these people and only focus on your target group with specific targetinging! As a result, you will pay less and have better results! I can help you setup a new Google Ads account, a review or audit an existing Ads account, optimise on an ongoing basis. If you want to run high performing and profitable campaign then get in touch with me now.'
+    twitter: 'sohelkhannfs'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -43,7 +44,7 @@ header:
 
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Sohel Khan'
     license:
       enable: false
       allow_derivatives: false
