--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -21,10 +21,10 @@ removePathAccents: true
 
 module:
   imports:
-    - path: /themes/modules/wowchemy-plugin-netlify-cms
-    - path: /themes/modules/wowchemy-plugin-netlify
-    - path: /themes/modules/wowchemy-plugin-reveal
-    - path: /themes/modules/wowchemy
+    - path: /modules/wowchemy-plugin-netlify-cms
+    - path: /modules/wowchemy-plugin-netlify
+    - path: /modules/wowchemy-plugin-reveal
+    - path: /modules/wowchemy/v5
 
 ############################
 ## ADVANCED
